# seanneilan.com

./: .gitignore  Modelfile  TESTING_SUMMARY.md  TYPST-WASM-ISSUES.md  fine-tuning-qwen3-4b.md  hugo.toml  package-lock.json  package.json  training.json  training.jsonl  tsconfig.json  vitest.config.ts
content/: about.md  big-number-names.md  grid-draw.md  interests.md  snippets.md  typst-math-notebook.md
grid-draw/: .gitignore  CLAUDE_PROMPT.md  Cargo.toml  DEPLOY.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.widget.ts  vitest.config.ts
grid-draw-widget/: README.md  pyproject.toml  test_widget.py
grid-draw-widget/__marimo__/session/: test_widget.py.json
grid-draw-widget/grid_draw_widget/: __init__.py
grid-draw-widget/grid_draw_widget/static/: widget.css  widget.js
grid-draw/src/: cells.rs  import_export.rs  lib.rs  rendering.rs  shapes.rs
grid-draw/src-tauri/: Cargo.toml  tauri.conf.json
grid-draw/src-tauri/capabilities/: default.json
grid-draw/src-tauri/src/: lib.rs  main.rs
grid-draw/src-ts/: App.tsx  main.tsx  widget-entry.tsx
grid-draw/src-ts/components/: DraggablePanel.tsx  GridCanvas.tsx
grid-draw/src-ts/hooks/: useGridWasm.ts  useTauriEvents.ts
grid-draw/src-ts/store/: gridStore.ts
grid-draw/src-ts/styles/: globals.css  grid-draw.css
grid-draw/src-ts/types/: anywidget.ts  grid.ts
grid-draw/src-ts/utils/: selection.test.ts  selection.ts
public/: 404.html  index.html  index.xml  sitemap.xml
qwen-target/: README.md  blog_post.md  browser.py  hello.py  main.py  prompt.py  pyproject.toml  target_scraper_stuff.py  visualize_memory.py
qwen-target/utils/: __init__.py  fonts.py  memory_tracking.py
tes/: generated_training_data.jsonl  helpers.py  main.py  main_streaming.py  (+6 more)
(+192 files in other folders)
