[package]
name = "grid-draw-wasm"
version = "0.1.0"
edition = "2021"
description = "Interactive 32x32 grid canvas in WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
]

[profile.release]
lto = true
opt-level = "s"
