[package]
name = "grid-draw"
version = "1.0.0"
description = "Grid Draw - Desktop App"
authors = []
edition = "2021"

[lib]
name = "grid_draw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
